@@ -1,6 +1,9 @@
 0.27.0 (unreleased)
 -------------------
  - Add support for SOAP attachments (multipart responses). (Dave Wapstra, #302)
+ - Update xsd:anyType to return the xml elements when no type is given via the
+   xsi:type attribute (#284)
+
 
 0.26.0 (2017-01-26)
 -------------------
